--- a/404.html
+++ b/404.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ошибка</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=/my-react-app/#/">
+    <title>Page Not Found</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div>Произошла ошибка</div>
-<script type="text/javascript">
-    const redirectTo = window.location.pathname + window.location.search
-    window.location.replace('/myfirstreactapp/#' + redirectTo)
-</script>
+<p>Redirecting...</p>
 </body>
 </html>
