--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/my-react-app/#/">
+    <meta http-equiv="refresh" content="0; url=/my-react-app/">
     <title>Page Not Found</title>
 </head>
 <body>
