--- a/404.html
+++ b/404.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/my-react-app/">
-    <title>Page Not Found</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ошибка</title>
 </head>
 <body>
-<p>Redirecting...</p>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<h1>Whoops! Looks like this page is lost.</h1>
+<script>
+    window.location.href = "/"; // Redirect to root
+</script>
 </body>
 </html>
