--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <h1>Whoops! Looks like this page is lost.</h1>
 <script>
-    window.location.href = "/"; // Redirect to root
+    window.location.href = "/about"; // Redirect to root
 </script>
 </body>
 </html>
