--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
     <title>404 Not Found</title>
 </head>
 <body>
-    <h1>Redirecting...</h1>
+    <h1>Redirecting to home...</h1>
 </body>
 </html>
